# ab-sim

./: .gitignore
ab-sim/: README.md  main.py  pyproject.toml
ab-sim/experiments/scenarios/: west_sac_pool.yml
ab-sim/src/ab_sim/app/: build.py  events.py  protocols.py  wiring.py
ab-sim/src/ab_sim/app/controllers/: demand.py  fleet.py  idle.py  trips.py
ab-sim/src/ab_sim/config/: __init__.py  models.py
ab-sim/src/ab_sim/domain/: mechanics.py  state.py
ab-sim/src/ab_sim/domain/entities/: driver.py  geography.py  motion.py  rider.py
ab-sim/src/ab_sim/domain/mechanics/: mechanics_core.py  mechanics_factory.py  mechanics_geospace.py  mechanics_movers.py  mechanics_od_samplers.py  mechanics_path_traversers.py  mechanics_route_planners.py  mechanics_routers.py  mechanics_speed_samplers.py  (+1 more)
ab-sim/src/ab_sim/io/: business_events.py  config.py  kernel_logging.py  recorder.py
ab-sim/src/ab_sim/policy/: assign.py  dwell.py  idle.py  matching.py  pricing.py  travel_time.py
ab-sim/src/ab_sim/runtime/: __init__.py  policy_factory.py  registries.py  resources.py  services_factory.py  types.py
ab-sim/src/ab_sim/services/: travel_time.py
ab-sim/src/ab_sim/sim/: clock.py  event.py  hooks.py  kernel.py  metrics.py  rng.py
ab-sim/tests/app/: test_build_and_run.py  test_cancels_and_timeouts.py  test_idlehandler_reposition_with_plan.py  test_mechanics_and_moveplan.py  test_pickup_and_rendezvous.py  test_regressions.py  test_rng.py
ab-sim/tests/io/: test_business_event.py
ab-sim/tests/sim/: test_clock_calendar.py  test_kernel.py  test_rng_registry.py
